templates/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq

          image: rabbitmq:3.13-management

          ports:
            - containerPort: 5672

            - containerPort: 15672

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi

          livenessProbe:
            tcpSocket:
              port: 5672

            initialDelaySeconds: 30

          readinessProbe:
            tcpSocket:
              port: 5672

            initialDelaySeconds: 10
