templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis

          image: redis:7

          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 300m
              memory: 256Mi

          livenessProbe:
            tcpSocket:
              port: 6379

            initialDelaySeconds: 20

          readinessProbe:
            tcpSocket:
              port: 6379

            initialDelaySeconds: 5
