templates/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:

  ports:
  - port: 5432

  selector:
    app: postgres

  clusterIP: None
