templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: payment-network-policy

spec:

  podSelector:
    matchLabels:
      app: payment-platform

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}

  egress:
    - {}
